@@ -1,1 +1,2 @@
 debian/local/Debian-PAM-MiniPolicy
+README
