@@ -1,9 +1,4 @@
 #!/usr/bin/make -f
-# Made with the aid of dh_make, by Craig Small
-# Sample debian/rules that uses debhelper. GNU copyright 1997 by Joey Hess.
-# This version is for a hypothetical package that builds an
-# architecture-dependant package, as well as an architecture-independant
-# package.
 
 LDFLAGS	:= -Wl,-z,defs
 CFLAGS	:= -g -D_GNU_SOURCE -D_REENTRANT -fPIC
@@ -13,109 +8,43 @@ CFLAGS += -O2
 endif
 
 DEB_HOST_GNU_TYPE	:= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-DEB_BUILD_GNU_TYPE	:= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
-
-ifeq ($(DEB_BUILD_GNU_TYPE), $(DEB_HOST_GNU_TYPE))
-  conf_args = --build $(DEB_BUILD_GNU_TYPE)
-else
-  conf_args = --build $(DEB_BUILD_GNU_TYPE) --host $(DEB_HOST_GNU_TYPE)
-endif
 
 LC_COLLATE=C
 export LC_COLLATE
 
-QUILT_PATCH_DIR = debian/patches-applied
-include /usr/share/quilt/quilt.make
-
-BUILD_TREE=$(CURDIR)
+export QUILT_PATCH_DIR = debian/patches-applied
 
 d = $(CURDIR)/debian
 dl = $(d)/local
 
-build: configure build-stamp
-build-stamp:
-	dh_testdir
+%:
+	dh $@ --with quilt
 
+override_dh_auto_build:
 	# Compile everything else
-	$(MAKE) -C $(BUILD_TREE) CFLAGS="$(CFLAGS)" LDFLAGS="$(LDFLAGS)"
-
+	dh_auto_build
 	pod2man --section 8 --release="Debian GNU/Linux" $(dl)/pam_getenv >$(dl)/pam_getenv.8
 
-	touch build-stamp
+override_dh_auto_configure:
+	dh_auto_configure -- --enable-static --enable-shared \
+		--libdir=/lib --sbindir=/sbin --disable-audit \
+		CFLAGS="$(CFLAGS)" LDFLAGS="$(LDFLAGS)"
 
-configure: patch configure-stamp
-configure-stamp:
-	cd $(BUILD_TREE) && \
-	./configure $(conf_args) \
-	--sysconfdir=/etc --prefix=/usr --enable-static --enable-shared \
-	--libdir=/lib --sbindir=/sbin --disable-audit
-	touch configure-stamp
+override_dh_compress:
+	dh_compress -Xhtml
 
+override_dh_install:
+	dh_install -plibpam-modules -Xpam_cracklib
+	dh_install -Nlibpam-modules
 
-clean: clean-patched unpatch
-
-clean-patched:
-	dh_testdir
-	dh_testroot
-	[ ! -f $(BUILD_TREE)/Makefile ] || $(MAKE) -C $(BUILD_TREE) distclean
-	dh_clean
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	dh_installdirs
-
-	$(MAKE) -C $(BUILD_TREE) DESTDIR=$(CURDIR)/debian/tmp install
-
-# Build architecture-independent files here.
-binary-indep: install
-	dh_testdir -i
-	dh_testroot -i
-	dh_install -i
-	dh_installman -i
-	dh_installdocs -i
-	dh_installdebconf -i
-	dh_installchangelogs -i
-	dh_compress -i -X.html
-	dh_lintian -i
-	dh_link -i
-	dh_fixperms -i
-	dh_installdeb -i
-	dh_gencontrol -i
-	dh_md5sums -i
-	dh_builddeb -i
-
-binary-arch: install
-	dh_testdir -a
-	dh_testroot -a
-
-	dh_install -a -Nlibpam-cracklib -X pam_cracklib
-	dh_install -plibpam-cracklib
-	dh_link -a
-	dh_installman -a
+override_dh_installman:
+	dh_installman
 	rm -f $(d)/libpam-modules/usr/share/man/man5/pam.conf.5
 
-	dh_installdebconf -a
-	dh_installdocs -a $(BUILD_TREE)/README
-	dh_installexamples -a
-
-	dh_installcron -a
-
-	dh_installchangelogs -a
-	dh_lintian -a
-
-	dh_strip -a
-	dh_compress -a
-	dh_fixperms -a
+override_dh_fixperms:
+	dh_fixperms
 	chgrp shadow $(d)/libpam-modules/sbin/unix_chkpwd
 	chmod 02755 $(d)/libpam-modules/sbin/unix_chkpwd
-	dh_makeshlibs -a -V "libpam0g (>= 1.1.0)"
-	dh_installdeb -a
-	dh_shlibdeps -a
-	dh_gencontrol -a
-	dh_md5sums -a
-	dh_builddeb -a
 
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary patch unpatch install configure
+override_dh_makeshlibs:
+	dh_makeshlibs -V "libpam0g (>= 1.1.0)"
