@@ -15,6 +15,8 @@ pam (1.1.0-3) UNRELEASED; urgency=low
   * Drop stale content from README.debian: some of this should have been in
     NEWS.Debian instead (but is so old it's not worth putting it there now),
     some of it is obsolete by the change in package VCS.
+  * Convert debian/rules to debhelper 7 and add versioned build-dependencies
+    on debhelper and quilt to suit.
 
  -- Steve Langasek <vorlon@debian.org>  Tue, 01 Sep 2009 22:23:47 -0700
 
